# stim

./: .gitignore  LICENSE.md  README.md  dev-reinstall.sh  pyproject.toml  setup.py
.github/workflows/: release.yml
Formula/: stim.rb
scripts/: dev-reinstall.sh  update-formula.sh
stim/: stim.py
